; No-op test to attach examples to the solver-service package

(tests
 (names main submit)
 (package solver-service)
 (libraries
  capnp-rpc-unix
  current_git
  current_github
  current_ocluster
  eio_main
  lwt_eio
  fmt.cli
  fmt.tty
  logs.cli
  logs.fmt
  ocluster-api
  solver-service-api)
 (action (progn)))
