(library
 (name solver_service)
 (public_name solver-service)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (libraries
  lwt.unix
  solver-service-api
  ppx_deriving_yojson.runtime
  opam-0install
  capnp-rpc-unix
  git-unix
  ocaml-version
  str)
 (modules
  epoch_lock
  git_context
  opam_repository
  opam_repository_intf
  process
  remote_commit
  service
  solver
  solver_service))

(executable
 (name main)
 (package solver-service)
 (public_name solver-service)
 (libraries solver-service logs.cli)
 (modules main))
