; No-op test to attach stress.exe to the solver-service package

(tests
 (names stress stress_submit)
 (package solver-worker)
 (libraries
  solver-worker
  current_ocluster
  current_web
  ocaml-ci-service
  logs.cli
  logs.fmt
  fmt.cli)
 (preprocess
  (pps ppx_deriving_yojson))
 (action (progn)))
