; No-op test to attach stress.exe to the solver-service package

(tests
 (names stress stress_submit stress_submit_auto_cancel)
 (package solver-worker)
 (libraries
  solver-worker
  current_ocluster
  current_web
  logs.cli
  logs.fmt
  ocaml-version
  fmt.cli)
 (preprocess
  (pps ppx_deriving_yojson))
 (action (progn)))
