(library
 (name solver_worker)
 (public_name solver-worker)
 (libraries ocluster-api solver-service)
 (modules context log log_data process solver_worker))

(executable
 (name main)
 (libraries
  dune-build-info
  logs.cli
  fmt.cli
  fmt.tty
  prometheus-app.unix
  solver-worker)
 (modules main worker))

; This is a hack to work around https://github.com/ocaml/dune/issues/3499
; We first build the binaries, then copy them to a new name, then install them.
; This allows us to add in the run-time dependency on solver-worker in the
; copy step.

(install
 (section bin)
 (package solver-worker)
 (files
  (main-copy.exe as solver-worker)))

(rule
 (target main-copy.exe)
 (deps
  (package solver-service))
 (action
  (copy main.exe main-copy.exe)))
