opam-version: "2.0"
name: "0install-solver"
version: "2.18"
synopsis: "Package dependency solver"
description: """\
A package dependency resolver based on a SAT solver. This was originally
written for the 0install package manager, but is now generic and is also used
as a solver backend for opam.
The SAT solver is based on MiniSat (http://minisat.se/Papers.html) and
the application to package management is based on OPIUM (Optimal Package
Install/Uninstall Manager). 0install-solver uses a (novel?) strategy to find
the optimal solution extremely quickly (even for a SAT-based solver)."""
maintainer: "talex5@gmail.com"
authors: "zero-install-devel@lists.sourceforge.net"
license: "LGPL-2.1-or-later"
homepage: "https://docs.0install.net/developers/solver/"
doc: "https://0install.github.io/0install/"
bug-reports: "https://github.com/0install/0install/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.5"}
  "ounit2" {with-test}
]
build: [
  "dune"
  "build"
  "-p"
  name
  "-j"
  jobs
  "@install"
  "@runtest" {with-test}
]
dev-repo: "git+https://github.com/0install/0install.git"
url {
  src:
    "https://github.com/0install/0install/releases/download/v2.18/0install-2.18.tbz"
  checksum: [
    "sha256=648c4b318c1a26dfcb44065c226ab8ca723795924ad80a3bf39ae1ce0e9920c3"
    "sha512=6d4734754951fad9caad5d876a1301e283bdd77a080d6601d57b21c540a30a616b18f664cbd4f86748c90de41cf3ef54f3a883fd75f638abbe3630a0320e4a7f"
  ]
}
x-commit-hash: "b58af5db6afd496cfd4a5f85fb23f30ba8dfbc87"
